src/pnu-book-store-devops/terraform/k8s/web/backend_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: web
  annotations:
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "28476"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/actions: >
      {"type":"targetGroup","targetGroup":{"targetGroups":[{"serviceName":"backend","servicePort":80}]}}
spec:
  ingressClassName: alb				# ALB Ingress Controller와 연결
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
